# openFVD

./: CMakeLists.txt  README.md  fvd.pro  main.cpp
.github/workflows/: qmake-builds.yml
core/: exportfuncs.cpp  exportfuncs.h  logging.cpp  logging.h
osx/: Init.cpp
renderer/: glviewwidget.cpp  glviewwidget.h  mytexture.cpp  qtglcompat.h
tests/: tests.pro
tests/corelogic/: corelogic.pro
tests/corelogic_tests/: corelogic_tests.cpp  corelogic_tests.pro
ui/: mainwindow.cpp  projectwidget.cpp  projectwidget.h
